import org.jetbrains.gradle.ext.*

plugins {
    id "idea"
    id "java"
    id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.5"
}

group 'wtf.kiddo.nivia'
version '1.0-SNAPSHOT'

repositories {
    mavenLocal()
    maven { url 'https://mirrors.cloud.tencent.com/nexus/repository/maven-public/' }
    maven { url 'https://jitpack.io' }
    mavenCentral()
}

dependencies {
    implementation 'com.github.PasteIndustrial:eventbus:1.0.3'
    implementation 'com.google.code.findbugs:jsr305:3.0.2'
    implementation 'javax.vecmath:vecmath:1.5.2'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation fileTree(include: ['*.jar'], dir: 'dependences/libs')
}

idea {
    project {
        settings {
            runConfigurations {
                "MinecraftClient"(Application) {
                    moduleName = 'MinecraftClient'
                    moduleName = project.name + '.main'
                    mainClass = 'Start'
                    workingDirectory = "${project.projectDir}${File.separator}run"
                    jvmArgs = "-Djava.library.path=\"${project.projectDir}${File.separator}dependences${File.separator}natives\""
                }
            }
        }
    }
    module {
        inheritOutputDirs = false
        outputDir = file('build')
        testOutputDir = file('build')
    }
}

compileJava.options.encoding = "UTF-8"
sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
project.mkdir "${project.projectDir}/run"